# Nihilent_POC_Attempt2

./: README.md
automation/: README.md  pyproject.toml
automation/src/automation/: crew.py  main.py
automation/src/automation/config/: agents.yaml  tasks.yaml
automation/src/automation/tools/: __init__.py  pdf_tools.py
